# musichub

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  run_gui.py  run_tests.py
docs/: CORE_MODULES.md  GUI_GUIDE.md  IMPLEMENTATION_REPORT.md  plugins.md  qobuz_provider.md
docs/providers/: apple_music.md
examples/: apple_music_example.py  basic_usage.py
gui/: __init__.py  app.py  styles.py  widgets.py
gui/resources/: README.md
providers/: DEEZER_README.md  README.md  SPOTIFY_README.md  TIDAL_IMPLEMENTATION.md  __init__.py  apple_music.py  base.py  deezer.py  example_usage.py  example_usage_spotify.py  netease.py  qq_music.py  spotify.py  tidal.py
providers/examples/: deezer_example.py  tidal_example.py
providers/tests/: test_deezer.py
src/musichub/: __init__.py
src/musichub/cli/: __init__.py  main.py
src/musichub/core/: __init__.py  config.py  converter.py  downloader.py  engine.py  events.py  manager.py  metadata.py  types.py
src/musichub/gui/: __init__.py  app.py  main.py
src/musichub/plugins/: __init__.py  base.py  registry.py
src/musichub/plugins/downloaders/: __init__.py  base.py  http.py
src/musichub/plugins/exporters/: __init__.py  base.py  flac.py  m4a.py  mp3.py
src/musichub/plugins/sources/: __init__.py  base.py  tidal.py
src/musichub/providers/: __init__.py  apple_music.py  qobuz.py  test_qobuz.py  youtube_music.py
src/musichub/utils/: __init__.py  async_utils.py  logger.py  metadata.py
tests/: conftest.py  test_apple_music.py  test_apple_music_standalone.py  test_cli.py  test_downloader.py  test_gui.py  test_metadata.py  test_providers.py  test_tidal.py
tests/unit/: test_converter.py  test_downloader.py  test_engine.py  test_metadata.py
